<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_login"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title=" "
        app:layout_constraintTop_toTopOf="parent"/>

        <!-- Company Header Section -->
        <TextView
            android:id="@+id/company_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/company_name"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.8"/>

        <!-- Username Field -->
        <EditText
            android:id="@+id/email_field"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="Username/Email"
            app:layout_constraintTop_toBottomOf="@id/company_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.8"/>

        <!-- Password Field -->
        <EditText
            android:id="@+id/password_field"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="Password"
            app:layout_constraintTop_toBottomOf="@id/email_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.8"/>

        <!-- Login button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Login"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.8"/>

        <!-- Register button -->
        <Button
            android:id="@+id/register_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="Register"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>
