<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <EditText
        android:id="@+id/input_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:maxWidth="480dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/input_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:maxWidth="480dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        tools:ignore="HardcodedText" />

</LinearLayout>
