<resources>
    <string name="app_name">InventoryApp</string>
    <string name="company_name">Acme Co.</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="item_image">Item image</string>

    <!-- For Item View Cards -->
    <string name="itemAdd">+</string>
    <string name="itemSubtract">-</string>
    <string name="item_description">Item Description</string>

    <!-- User Registration Dialog -->
    <string name="registerOk">Register</string>

</resources>
